--- a/index_pdf.html
+++ b/index_pdf.html
@@ -407,7 +407,7 @@
                     </div>
                     <p><strong>描述：</strong>基金多樣資訊查詢、不同角度評量基金績效與排序、線上線下申購地圖、投資試算計劃。</p>
                     <p><strong>技術棧：</strong>Python、MessagingAPI、Flask</p>
-                    <img src="Mansky_Line1.PNG" alt="LineBot_基金資訊平台">
+                    <img src="images/Mansky_Line1.PNG" alt="LineBot_基金資訊平台">
                     <div class="tags">
                         <span>#爬蟲</span>
                     </div>
@@ -440,7 +440,7 @@
                 <p><strong>描述：</strong><p>結合 Pillow 與 OpenCV 進行影像處理</p>
                 <p>利用卷積神經網路（CNN）建立人臉辨識模型。</p>
                 <p><strong>技術棧：</strong>Python、CNN、OpenCV</p>
-                <img src="Pillow_Model1.PNG" alt="人臉辨識系統開發">
+                <img src="images/Pillow_Model1.PNG" alt="人臉辨識系統開發">
                 <div class="tags">
                     <span>#影像辨識</span>
                 </div>
